--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 ---
+layout: default
 title: lesson4_challenge_day2
 ---
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>{{ page.title }}</title>
-</head>
+
 <body>
-    <h1>Hello from Jekyll</h1>
+    
+    <h1>Main page</h1>
 </body>
 </html>
